--- a/index.html
+++ b/index.html
@@ -106,13 +106,7 @@
     }, true);
   </script>
 
-  <script type="module">
-    // Carga de script con Cache Busting forzado
-    const script = document.createElement('script');
-    script.type = 'module';
-    script.src = '/src/main.tsx?v=' + Date.now();
-    document.body.appendChild(script);
-  </script>
+  <script type="module" src="/src/main.tsx"></script>
 
   <script>
     // Service Worker de Kill-Switch
